# puzzle15

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  sources.cmake
app/inc/puzzle15/: assertions.h  board.h  game.h  game_events.h  game_stats.h  geo.h  platform_iface.h  platform_ifaces.h
app/platform/win32/: CMakeLists.txt  sources.cmake
app/platform/win32/src/puzzle15/platform/: canvas.cpp  canvas.h  error.cpp  error.h  game_control.cpp  game_control.h  game_status_bar.cpp  game_status_bar.h  game_widget.cpp  game_widget.h  game_window.cpp  game_window.h  handles.h  main.cpp  msg_loop.cpp  msg_loop.h  stdafx.h  thunk.cpp  thunk.h  window.cpp  window.h
app/platform/win32/src/puzzle15/platform/res/: Resource.aps  Resource.rc  resource.h
app/src/: board.cpp  game.cpp  geo.cpp
cmake/: boost.cmake  catch2.cmake  clangformat.cmake
tests/: CMakeLists.txt  board.cpp
